; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_ecp.c_mbedtls_ecp_gen_keypair.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_ecp.c_mbedtls_ecp_gen_keypair.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mbedtls_ecp_gen_keypair(%struct.TYPE_4__* %0, i32* %1, i32* %2, i32 (i8*, i8*, i64)* %3, i8* %4) #0 {
  %6 = alloca %struct.TYPE_4__*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32 (i8*, i8*, i64)*, align 8
  %10 = alloca i8*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32 (i8*, i8*, i64)* %3, i32 (i8*, i8*, i64)** %9, align 8
  store i8* %4, i8** %10, align 8
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = load i32*, i32** %7, align 8
  %15 = load i32*, i32** %8, align 8
  %16 = load i32 (i8*, i8*, i64)*, i32 (i8*, i8*, i64)** %9, align 8
  %17 = load i8*, i8** %10, align 8
  %18 = call i32 @mbedtls_ecp_gen_keypair_base(%struct.TYPE_4__* %11, i32* %13, i32* %14, i32* %15, i32 (i8*, i8*, i64)* %16, i8* %17)
  ret i32 %18
}

declare dso_local i32 @mbedtls_ecp_gen_keypair_base(%struct.TYPE_4__*, i32*, i32*, i32*, i32 (i8*, i8*, i64)*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
